--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -28,6 +29,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
