--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
@@ -22,6 +23,8 @@
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-github-calendar": "^4.5.9",
+    "recharts": "^3.1.2",
     "shiki": "^3.12.1",
     "tailwind-merge": "^3.3.1"
   },
